Academia.Translogix.WebApi/Academia.Translogix.WebApi/kubernetes/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: api-translogix-pod
  namespace: academia
spec:
  containers:
    - name: webapi
      image: harbor-01.docker-registry.grupofarsiman.io/academia/api-translogix:v5
      ports:
        - containerPort: 8080
