Academia.Translogix.WebApi/Academia.Translogix.WebApi/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-translogix-service
  namespace: academia
spec:
  type: ClusterIP
  selector:
    app: api-translogix
  ports:
    - name: http
      port: 80
      targetPort: 80
