Academia.Translogix.WebApi/Academia.Translogix.WebApi/kubernetes/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: api-translogix-ingress
  namespace: academia
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`apps.academia-dev.grupofarsiman.io`) &&
        PathPrefix(`/staging/academia/api-translogix`)
      middlewares:
        - name: api-translogix-middleware
      services:
        - name: api-translogix-service
          port: 80
  tls:
    secretName: tls-dev-academia.grupofarsiman.io
